<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/clicker_height"
    android:background="@color/colorAccent"
    android:maxHeight="@dimen/clicker_height"
    android:minHeight="@dimen/clicker_height"
    tools:context=".model.clicker.Clicker">

    <Button
        android:id="@+id/button_dec"
        android:layout_width="75dp"
        android:layout_height="134dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccent"
        android:text="@string/minus"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_inc"
        android:layout_width="75dp"
        android:layout_height="134dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:text="@string/plus"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/count_view"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:labelFor="@id/count_view"
        android:text="@string/zero"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_inc"
        app:layout_constraintStart_toEndOf="@+id/button_dec"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/count_view"
        app:layout_constraintStart_toStartOf="@+id/count_view"
        app:layout_constraintTop_toBottomOf="@+id/count_view" />

</android.support.constraint.ConstraintLayout>