<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/oops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oops"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/empty_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_list_1"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/empty_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_list_2"
            android:textAlignment="center" />
    </LinearLayout>

    <ListView
        android:id="@+id/clickers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>